--- a/src/components/Inputs.css
+++ b/src/components/Inputs.css
@@ -34,6 +34,9 @@ input {
 /* Responsive adjustments */
 @media screen and (max-width: 768px) {
   input {
+    width: 97.5%;
+  }
+  label{
     width: 100%;
   }
   .but {
