--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
 }
 
 h1 {
-  line-height: 1.1  ;
+  line-height: 1.1;
 }
 h1, h2, h3, h4, h5, h6, p {
   color: white;
@@ -54,4 +54,20 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+/* Responsive adjustments */
+@media screen and (max-width: 768px) {
+  body {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  button {
+    width: 100%;
+    padding: 0.5em 1em;
+  }
+  h1 {
+    font-size: 1.5rem;
+  }
 }
